--- a/3motarjam.html
+++ b/3motarjam.html
@@ -1,5 +1,5 @@
 
-<meta property="og:title" content=" ماى ايجى سكس مترجم ">
+<meta property="og:title" content=" سكس عالمى مترجم ">
 
 <script type = "text/javascript">
 function reDirect() {
