--- a/kaskosynono/1.html
+++ b/kaskosynono/1.html
@@ -1,4 +1,4 @@
-			<meta property="og:title" content="  افلام شوشو شرموطه">
+			<meta property="og:title" content="  افلام كسكوسى نونو">
 <meta property="og:description" content="
                                         
                                         
