--- a/test/1.html
+++ b/test/1.html
@@ -1,3 +1,8 @@
+<a onclick ="javascript:ShowHide('HiddenDiv_1')" href="javascript:;" >اظهار/اخفاء</a><div id="HiddenDiv_1" style="DISPLAY: none" >
+
+
+
+
 
 <!DOCTYPE html>
 <html dir="rtl" lang="ar" prefix="og: http://ogp.me/ns#">
