--- a/test/1.html
+++ b/test/1.html
@@ -1,4 +1,4 @@
-<a onclick ="javascript:ShowHide('HiddenDiv_1')" href="javascript:;" >اظهار/اخفاء</a><div id="HiddenDiv_1" style="DISPLAY: none" >
+<a onclick ="javascript:ShowHide('HiddenDiv_1')" href="javascript:;" > </a><div id="HiddenDiv_1" style="DISPLAY: none" >
 
 
 
