--- a/omrasha.html
+++ b/omrasha.html
@@ -1,11 +1,11 @@
-<meta property="og:title" content=" 6mohajabat ">
+<meta property="og:title" content=" omrasha ">
 
 
 
 <meta property="og:description" content="
                                         
                                         
-6mohajabat
+omrasha
                                          ">
 
 
