--- a/test/0000000.html
+++ b/test/0000000.html
@@ -8,12 +8,12 @@
 <meta name="description" content="This website is filled to the brim with HQ animal porn. We love it as much as you do. You have your full access to this constantly-growing collection of bestiality porn" />
 <meta name="keywords" content="animal porn site" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/css/style.css">
-<link rel="stylesheet" href="/css/images.css">
+<link rel="stylesheet" href="http://animalporn.site/css/style.css">
+<link rel="stylesheet" href="http://animalporn.site/css/images.css">
 <link rel="alternate" type="application/rss+xml" href="http://animalporn.site/rss.php" />
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script src="http://animalporn.site//js/jquery.lazyload.min.js" type="text/javascript"></script>
-<script src="http://animalporn.site//js/main.js"></script>
+<script src="http://animalporn.site/js/jquery.lazyload.min.js" type="text/javascript"></script>
+<script src="http://animalporn.site/js/main.js"></script>
 
 
 </head>
