--- a/test/0000000.html
+++ b/test/0000000.html
@@ -4,7 +4,7 @@
 <title>Animal Porn Site</title>
 <link rel="canonical" href="http://animalporn.site/" />
 <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
-<base target=_blank>
+<base target=_ >
 <meta name="description" content="This website is filled to the brim with HQ animal porn. We love it as much as you do. You have your full access to this constantly-growing collection of bestiality porn" />
 <meta name="keywords" content="animal porn site" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
