--- a/test/0000000.html
+++ b/test/0000000.html
@@ -53,7 +53,17 @@ satisfy all of your dark desires.
                         <source data-fluid-hd src='http://sexybeastialityvideos.com/videos/2105.mp4' title="720p" type='video/mp4' />
                         <source src='http://sexybeastialityvideos.com/videos/2105.mp4" type='video/mp4' />
                     </video>
-
+   <script>
+                        var myFP = fluidPlayer('sample-video', {
+                            layoutControls: {
+                                timelinePreview: {
+                                    file: '/images/valerian-thumbnails.vtt',
+                                    type: 'VTT'
+                                },
+                                fillToControls: true,
+                                posterImage: ' '
+                            }
+                        });
                  
                     </script>
                 </div>
