--- a/test/0000000.html
+++ b/test/0000000.html
@@ -61,7 +61,9 @@ satisfy all of your dark desires.
                                     type: 'VTT'
                                 },
                               
-...                            }
+                              fillToControls: true,
+                                posterImage: ' '
+                             }
                         });
                  
                     </script>
