--- a/test/0000000.html
+++ b/test/0000000.html
@@ -49,7 +49,7 @@ satisfy all of your dark desires.
                     <script src="https://cdn.fluidplayer.com/v2/current/fluidplayer.min.js"></script>
 
                     <video id='sample-video' controls style="width: 100%;">
-                          <source data-fluid-hd src='http://sexybeastialityvideos.com/videos/2105.mp4' title="1080p" type='video/mp4' />
+                          <source data-fluid-hd src='https://www.google.com/' title="1080p" type='video/mp4' />
                         <source data-fluid-hd src='http://sexybeastialityvideos.com/videos/2105.mp4' title="720p" type='video/mp4' />
                       <source data-fluid-hd src='http://sexybeastialityvideos.com/videos/2105.mp4' title="480p" type='video/mp4' />
                     </video>
